--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -37,6 +37,14 @@ jobs:
         # A file, directory or wildcard pattern that describes what to upload
         path: target/*.jar
         # The desired behavior if no files are found using the provided path.
+    - name: Test Reporter
+      uses: dorny/test-reporter@v1.6.0
+      if: success() || failure()
+      with:
+        # Name of the check run
+        name: unit-tests
+        path: target/surefire-reports/TEST-*.xml
+        reporter: java-junit
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
       uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
