--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -45,6 +45,12 @@ jobs:
         name: unit-tests
         path: target/surefire-reports/TEST-*.xml
         reporter: java-junit
+    - name: Upload Jacoco Report
+      uses: actions/upload-artifact@v3.1.0
+      with:
+        # Artifact name
+        name: jacocoreport
+        path: target/site
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
       uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
